modification du code dégradé sccs - passage ok au w3c / insertion image onglet + description / indentation vérifiée

--- a/delice.html
+++ b/delice.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8"/>
         <title>Ohmyfood - Le délice des papilles</title>
-        <link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="styledelice.css"/>
+        <meta name="description" content="Ohmyfood ! Paris">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="photo.png">
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="styledelice.css"/>        
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
@@ -58,8 +60,7 @@
                         </p>
                     </div>
                     <div class="police2">
-                        <div class="deco">
-                        
+                        <div class="deco">                        
                             <span class="img1"></span>
                                 <h3>
                                     Pour bien continuer
@@ -121,7 +122,8 @@
         </main>
         <footer>
             <div class="wiggle">
-                <a href="mentions.html" target="_blank">Mentions légales
+                <a href="mentions.html" target="_blank">
+                    Mentions légales
                 </a>  
                 <a href="mailto:julieloriau@gmail.com">
                     Contactez-nous          
