--- a/mentions.html
+++ b/mentions.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>Ohmyfood - Mentions Légales</title>
-        <link rel="stylesheet" href="style.css"/>
+        <meta name="description" content="Ohmyfood ! Paris">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="photo.png">
+        <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
@@ -21,31 +23,32 @@
                 <h3>
                     Editeur du Site :
                 </h3>
-                    <p>SARL Paul Le Chef de Projet  
-                        <br>Numéro de SIREN : 800 000 000
-                        <br>Responsable éditorial : Paul Le Chef de Projet   
-                        <br>Place de la Mairie 
-                        <br>37300 JOUE-LES-TOURS
-                        <br>Téléphone : 02 00 00 00 00
-                        <br>Fax : 02 00 00 00 01
-                        <br>Email : julieloriau@gmail.com
+                    <p>
+                        SARL Paul Le Chef de Projet  
+                            <br>Numéro de SIREN : 800 000 000
+                            <br>Responsable éditorial : Paul Le Chef de Projet   
+                            <br>Place de la Mairie 
+                            <br>37300 JOUE-LES-TOURS
+                            <br>Téléphone : 02 00 00 00 00
+                            <br>Fax : 02 00 00 00 01
+                            <br>Email : julieloriau@gmail.com
                     </p>
                 <h3>
                     Hébergement :        
                 </h3>
                     <p>
                         Hébergeur : GITHUB    
-                        <br>PRIUS BERNHARDPLEIN 200 
-                        <br>99135 PAYS BAS
-                        <br>Site Web : www.github.com
+                            <br>PRIUS BERNHARDPLEIN 200 
+                            <br>99135 PAYS BAS
+                            <br>Site Web : www.github.com
                     </p>
                 <h3>
                     Développement :
                 </h3>
                     <p>
                         SARL Paul Le Chef de Projet 
-                        <br>Place de la Mairie 
-                        <br>37300 JOUE-LES-TOURS
+                            <br>Place de la Mairie 
+                            <br>37300 JOUE-LES-TOURS
                     </p>
                 <h3>
                     Conditions d’utilisation :
@@ -58,58 +61,58 @@
                     </p>
                     <p>
                         Toutefois, des erreurs ou omissions peuvent survenir. 
-                        <br>L’internaute devra donc s’assurer de l’exactitude des informations et signaler toutes modifications du site qu’il jugerait utile auprès du responsable éditorial.
-                        <br>La SARL Paul le Chef de Projet n’est en aucun cas responsable de l’utilisation faite de ces informations, et de tout préjudice direct ou indirect pouvant en découler.
+                            <br>L’internaute devra donc s’assurer de l’exactitude des informations et signaler toutes modifications du site qu’il jugerait utile auprès du responsable éditorial.
+                            <br>La SARL Paul le Chef de Projet n’est en aucun cas responsable de l’utilisation faite de ces informations, et de tout préjudice direct ou indirect pouvant en découler.
                     </p>
                 <h3>
                     Cookies :
                 </h3> 
                     <p>
                         Le site https://loriaujulie.github.io/ohmyfood peut être amené à vous demander l’acceptation des cookies pour des besoins de statistiques et d’affichage. 
-                        <br>Les cookies sont des informations déposées sur votre disque dur par le serveur du site que vous visitez. 
-                        <br>Il contiennent plusieurs données qui sont stockées sur votre ordinateur dans un simple fichier texte auquel un serveur accède pour lire et enregistrer des informations. 
-                        <br>Certaines parties de ce site ne peuvent être fonctionnelles sans l’acceptation de cookies.                 
+                            <br>Les cookies sont des informations déposées sur votre disque dur par le serveur du site que vous visitez. 
+                            <br>Il contiennent plusieurs données qui sont stockées sur votre ordinateur dans un simple fichier texte auquel un serveur accède pour lire et enregistrer des informations. 
+                            <br>Certaines parties de ce site ne peuvent être fonctionnelles sans l’acceptation de cookies.                 
                     </p>
                 <h3>
                     Liens hypertextes :
                 </h3> 
                     <p>
                         Les sites internet de peuvent offrir des liens vers d’autres sites internet ou d’autres ressources disponibles sur Internet. 
-                        <br>La SARL Paul le Chef de Projet ne dispose d’aucun moyen pour contrôler les sites en connexion avec ses sites internet. 
-                        <br>Elle ne répond pas de la disponibilité de tels sites et sources externes, ni ne la garantit. 
-                        <br>Elle ne peut être tenue pour responsable de tout dommage, de quelque nature que ce soit, résultant du contenu de ces sites ou sources externes, et notamment des informations, produits ou services qu’ils proposent, ou de tout usage qui peut être fait de ces éléments. 
-                        <br>Les risques liés à cette utilisation incombent pleinement à l’internaute, qui doit se conformer à leurs conditions d’utilisation.
-                        <br>Les utilisateurs, les abonnés et les visiteurs des sites internet  ne peuvent pas mettre en place un hyperlien en direction de ce site sans l’autorisation expresse et préalable de La SARL Paul le Chef de Projet.
-                        <br>Dans l’hypothèse où un utilisateur ou visiteur souhaiterait mettre en place un hyperlien en direction d’un des sites internet de la SARL Paul le Chef de Projet, il lui appartiendra d’adresser un email accessible sur le site afin de formuler sa demande de mise en place d’un hyperlien. 
-                        <br>La SARL Paul le Chef de Projet se réserve le droit d’accepter ou de refuser un hyperlien sans avoir à en justifier sa décision.
+                            <br>La SARL Paul le Chef de Projet ne dispose d’aucun moyen pour contrôler les sites en connexion avec ses sites internet. 
+                            <br>Elle ne répond pas de la disponibilité de tels sites et sources externes, ni ne la garantit. 
+                            <br>Elle ne peut être tenue pour responsable de tout dommage, de quelque nature que ce soit, résultant du contenu de ces sites ou sources externes, et notamment des informations, produits ou services qu’ils proposent, ou de tout usage qui peut être fait de ces éléments. 
+                            <br>Les risques liés à cette utilisation incombent pleinement à l’internaute, qui doit se conformer à leurs conditions d’utilisation.
+                            <br>Les utilisateurs, les abonnés et les visiteurs des sites internet  ne peuvent pas mettre en place un hyperlien en direction de ce site sans l’autorisation expresse et préalable de La SARL Paul le Chef de Projet.
+                            <br>Dans l’hypothèse où un utilisateur ou visiteur souhaiterait mettre en place un hyperlien en direction d’un des sites internet de la SARL Paul le Chef de Projet, il lui appartiendra d’adresser un email accessible sur le site afin de formuler sa demande de mise en place d’un hyperlien. 
+                            <br>La SARL Paul le Chef de Projet se réserve le droit d’accepter ou de refuser un hyperlien sans avoir à en justifier sa décision.
                     </p>
                 <h3>
                     Services fournis :
                 </h3>
                     <p>
                         L’ensemble des activités de la société ainsi que ses informations sont présentés sur notre site https://loriaujulie.github.io/ohmyfood.
-                        <br>La SARL Paul le Chef de Projet s’efforce de fournir sur le site https://loriaujulie.github.io/ohmyfood, des informations aussi précises que possible. 
-                        <br>Les renseignements figurant sur le site https://loriaujulie.github.io/ohmyfood ne sont pas exhaustifs et les photos non contractuelles. 
-                        <br>Ils sont donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne. 
-                        <br>Par ailleurs, tous les informations indiquées sur le site https://loriaujulie.github.io/ohmyfood sont données à titre indicatif, et sont susceptibles de changer ou d’évoluer sans préavis.
+                            <br>La SARL Paul le Chef de Projet s’efforce de fournir sur le site https://loriaujulie.github.io/ohmyfood, des informations aussi précises que possible. 
+                            <br>Les renseignements figurant sur le site https://loriaujulie.github.io/ohmyfood ne sont pas exhaustifs et les photos non contractuelles. 
+                            <br>Ils sont donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne. 
+                            <br>Par ailleurs, tous les informations indiquées sur le site https://loriaujulie.github.io/ohmyfood sont données à titre indicatif, et sont susceptibles de changer ou d’évoluer sans préavis.
                     </p>
                 <h3>
                     Limitation contractuelles sur les données :
                 </h3>
                     <p>
                         Les informations contenues sur ce site sont aussi précises que possible et le site remis à jour à différentes périodes de l’année, mais peut toutefois contenir des inexactitudes ou des omissions. Si vous constatez une lacune, erreur ou ce qui parait être un dysfonctionnement, merci de bien vouloir le signaler par email, à l’adresse julieloriau@gmail.com, en décrivant le problème de la manière la plus précise possible (page posant problème, type d’ordinateur et de navigateur utilisé, …).
-                        <br>Tout contenu téléchargé se fait aux risques et périls de l’utilisateur et sous sa seule responsabilité. En conséquence, ne saurait être tenu responsable d’un quelconque dommage subi par l’ordinateur de l’utilisateur ou d’une quelconque perte de données consécutives au téléchargement. De plus, l’utilisateur du site s’engage à accéder au site en utilisant un matériel récent, ne contenant pas de virus et avec un navigateur de dernière génération mis-à-jour.
-                        <br>Les liens hypertextes mis en place dans le cadre du présent site internet en direction d’autres ressources présentes sur le réseau Internet ne sauraient engager la responsabilité de la SARL Paul le Chef de Projet.
+                            <br>Tout contenu téléchargé se fait aux risques et périls de l’utilisateur et sous sa seule responsabilité. En conséquence, ne saurait être tenu responsable d’un quelconque dommage subi par l’ordinateur de l’utilisateur ou d’une quelconque perte de données consécutives au téléchargement. De plus, l’utilisateur du site s’engage à accéder au site en utilisant un matériel récent, ne contenant pas de virus et avec un navigateur de dernière génération mis-à-jour.
+                            <br>Les liens hypertextes mis en place dans le cadre du présent site internet en direction d’autres ressources présentes sur le réseau Internet ne sauraient engager la responsabilité de la SARL Paul le Chef de Projet.
                     </p>    
                 <h3>
                     Propriété intellectuelle :
                 </h3>
                     <p>
                         Tout le contenu du présent site https://loriaujulie.github.io/ohmyfood, incluant, de façon non limitative, les graphismes, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société à l’exception des marques, logos ou contenus appartenant à d’autres sociétés partenaires ou auteurs.
-                        <br>Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord exprès par écrit de la SARL Paul le Chef de Projet. 
-                        <br>Cette représentation ou reproduction, par quelque procédé que ce soit, constitue une contrefaçon sanctionnée par les articles L.335-2 et suivants du Code de la propriété intellectuelle. 
-                        <br>Le non-respect de cette interdiction constitue une contrefaçon pouvant engager la responsabilité civile et pénale du contrefacteur. 
-                        <br>En outre, les propriétaires des Contenus copiés pourraient intenter une action en justice à votre encontre.
+                            <br>Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord exprès par écrit de la SARL Paul le Chef de Projet. 
+                            <br>Cette représentation ou reproduction, par quelque procédé que ce soit, constitue une contrefaçon sanctionnée par les articles L.335-2 et suivants du Code de la propriété intellectuelle. 
+                            <br>Le non-respect de cette interdiction constitue une contrefaçon pouvant engager la responsabilité civile et pénale du contrefacteur. 
+                            <br>En outre, les propriétaires des Contenus copiés pourraient intenter une action en justice à votre encontre.
                     </p>
                 <h3>
                     Déclaration à la CNIL :
@@ -122,20 +125,20 @@
                 </h3>
                     <p>
                         Les présentes conditions du site https://loriaujulie.github.io/ohmyfood sont régies par les lois françaises et toute contestation ou litiges qui pourraient naître de l’interprétation ou de l’exécution de celles-ci seront de la compétence exclusive des tribunaux dont dépend le siège social de la société. 
-                        <br>La langue de référence, pour le règlement de contentieux éventuels, est le français.
+                            <br>La langue de référence, pour le règlement de contentieux éventuels, est le français.
                     </p>
                 <h3>
                     Données personnelles :
                 </h3>
                     <p>
                         De manière générale, vous n’êtes pas tenu de nous communiquer vos données personnelles lorsque vous visitez notre site Internet https://loriaujulie.github.io/ohmyfood.
-                        <br>Cependant, ce principe comporte certaines exceptions. 
-                        <br>En effet, pour certains services proposés par notre site, vous pouvez être amenés à nous communiquer certaines données telles que : votre nom, votre fonction, le nom de votre société, votre adresse électronique, et votre numéro de téléphone.  
-                        <br>Dans tous les cas, vous pouvez refuser de fournir vos données personnelles. 
-                        <br>Dans ce cas, vous ne pourrez pas utiliser les services du site, notamment celui de solliciter des renseignements sur notre société, ou de recevoir les lettres d’information.
-                        <br>Enfin, nous pouvons collecter de manière automatique certaines informations vous concernant lors d’une simple navigation sur notre site Internet, notamment : des informations concernant l’utilisation de notre site, comme les zones que vous visitez et les services auxquels vous accédez, votre adresse IP, le type de votre navigateur, vos temps d’accès.
-                        <br>De telles informations sont utilisées exclusivement à des fins de statistiques internes, de manière à améliorer la qualité des services qui vous sont proposés. 
-                        <br>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
+                            <br>Cependant, ce principe comporte certaines exceptions. 
+                            <br>En effet, pour certains services proposés par notre site, vous pouvez être amenés à nous communiquer certaines données telles que : votre nom, votre fonction, le nom de votre société, votre adresse électronique, et votre numéro de téléphone.  
+                            <br>Dans tous les cas, vous pouvez refuser de fournir vos données personnelles. 
+                            <br>Dans ce cas, vous ne pourrez pas utiliser les services du site, notamment celui de solliciter des renseignements sur notre société, ou de recevoir les lettres d’information.
+                            <br>Enfin, nous pouvons collecter de manière automatique certaines informations vous concernant lors d’une simple navigation sur notre site Internet, notamment : des informations concernant l’utilisation de notre site, comme les zones que vous visitez et les services auxquels vous accédez, votre adresse IP, le type de votre navigateur, vos temps d’accès.
+                            <br>De telles informations sont utilisées exclusivement à des fins de statistiques internes, de manière à améliorer la qualité des services qui vous sont proposés. 
+                            <br>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
                     </p>
                     <p>
                         Tous droits réservés à SARL ANTHEDESIGN domiciliée 20 rue Tondu du Metz 60350 ATTICHY, pour les mentions légales ci-dessus énoncées et mises à disposition gratuitement sur le site https://www.anthedesign.fr/.
@@ -144,7 +147,8 @@
         </main>
         <footer>
             <div class="wiggle">
-                <a href="mentions.html" target="_blank">Mentions légales
+                <a href="mentions.html" target="_blank">
+                    Mentions légales
                 </a>  
                 <a href="mailto:julieloriau@gmail.com">
                     Contactez-nous          
