--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>Ohmyfood</title>
-        <link rel="stylesheet" href="style.css"/>
+        <meta name="description" content="Ohmyfood ! Paris">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="photo.png">        
+        <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">       
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Roboto+Slab&family=Sriracha&display=swap" rel="stylesheet">
     </head>
@@ -72,25 +74,26 @@
                 </section>
             </div>
             <div class="ligne3">
-                    <h3>
-                        Prochainement 
-                            <span class="point">
-                                <span id="point1">
-                                    .
-                                </span>
-                                <span id="point2">
-                                    .
-                                </span>
-                                <span id="point3">
-                                    .
-                                </span>
+                <h3>
+                    Prochainement 
+                        <span class="point">
+                            <span id="point1">
+                                .
                             </span>
-                    </h3>
+                            <span id="point2">
+                                .
+                            </span>
+                            <span id="point3">
+                                .
+                            </span>
+                        </span>
+                </h3>
             </div>
         </main>
         <footer>
             <div class="wiggle">
-                <a href="mentions.html" target="_blank">Mentions légales
+                <a href="mentions.html" target="_blank">
+                    Mentions légales
                 </a>  
                 <a href="mailto:julieloriau@gmail.com">
                     Contactez-nous          
