--- a/palette.html
+++ b/palette.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8"/>
         <title>Ohmyfood - La palette du goût</title>
+        <meta name="description" content="Ohmyfood ! Paris">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="photo.png">
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylepalette.css"/>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
@@ -114,7 +116,8 @@
         </main>
         <footer>
             <div class="wiggle">
-                <a href="mentions.html" target="_blank">Mentions légales
+                <a href="mentions.html" target="_blank">
+                    Mentions légales
                 </a>  
                 <a href="mailto:julieloriau@gmail.com">
                     Contactez-nous          
