effet fondu suite soutenance

--- a/index.html
+++ b/index.html
@@ -20,58 +20,50 @@
         </header>
         <main>
             <div class="ligne">
-                <section class="note">
+                <a href="note.html" class="note">
                     <div class="zoom">
-                        <a href="note.html">
-                            <i class="fas fa-music fa-3x">
-                            </i>
-                            <h5>
-                                La note enchantée
-                            </h5>
-                            <h4>
-                                MENU
-                            </h4>
-                        </a>
+                        <i class="fas fa-music fa-3x">
+                        </i>
+                        <h5>
+                            La note enchantée
+                        </h5>
+                        <h4>
+                            MENU
+                        </h4>
                     </div>
-                </section>
-                <section class="chic">
+                </a>
+                <a href="chic.html"  class="chic">
                     <div class="zoom">
-                        <a href="chic.html">
-                            <h5>
-                                Le chic à la française
-                            </h5>
-                            <h4>
-                                Menu
-                            </h4>
-                        </a>
+                        <h5>
+                            Le chic à la française
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
                     </div>
-                </section>
+                </a>
             </div>
             <div class="ligne">    
-                <section class="delice">
+                <a href="delice.html" class="delice">
                     <div class="zoom">
-                        <a href="delice.html">
-                            <h5>
-                                Le délice des papilles
-                            </h5>
-                            <h4>
-                                Menu
-                            </h4>
-                        </a>
+                        <h5>
+                            Le délice des papilles
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
                     </div>
-                </section>
-                <section class="palette">
+                </a>
+                <a href="palette.html" class="palette">
                     <div class="zoom">
-                        <a href="palette.html">
-                            <h5>
-                                La palette du goût
-                            </h5>
-                            <h4>
-                                Menu
-                            </h4>
-                        </a>
+                        <h5>
+                            La palette du goût
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
                     </div>
-                </section>
+                </a>
             </div>
             <div class="ligne3">
                 <h3>
